--- a/config/boards/shields/mtk64/mtk64.dtsi
+++ b/config/boards/shields/mtk64/mtk64.dtsi
@@ -123,22 +123,22 @@
         compatible = "zmk,kscan-gpio-charlieplex";
         wakeup-source;
 
-        interrupt-gpios = <&xiao_d 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
-        gpios =   <&xiao_d 1 GPIO_ACTIVE_HIGH> 
-                , <&xiao_d 2 GPIO_ACTIVE_HIGH> 
-                , <&xiao_d 3 GPIO_ACTIVE_HIGH> 
-                , <&xiao_d 6 GPIO_ACTIVE_HIGH>
-                , <&xiao_d 7 GPIO_ACTIVE_HIGH> 
-                , <&xiao_d 8 GPIO_ACTIVE_HIGH> 
-                , <&xiao_d 9 GPIO_ACTIVE_HIGH> 	
+        interrupt-gpios = <&gpio1 15 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
+        gpios =   <&gpio0 3 GPIO_ACTIVE_HIGH> 
+                , <&gpio0 28 GPIO_ACTIVE_HIGH> 
+                , <&gpio0 29 GPIO_ACTIVE_HIGH> 
+                , <&gpio1 11 GPIO_ACTIVE_HIGH>
+                , <&gpio1 12 GPIO_ACTIVE_HIGH> 
+                , <&gpio1 13 GPIO_ACTIVE_HIGH> 
+                , <&gpio1 14 GPIO_ACTIVE_HIGH> 	
                 ;
 
     };
 
     left_encoder: encoder_left {
         compatible = "alps,ec11";
-        a-gpios = <&xiao_d 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        b-gpios = <&xiao_d 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        a-gpios = <&gpio0 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        b-gpios = <&gpio0 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         steps = <15>;
         status = "disabled";
     };
