--- a/config/west.yml
+++ b/config/west.yml
@@ -10,6 +10,8 @@ manifest:
       url-base: https://github.com/caksoylar
     - name: englmaxi
       url-base: https://github.com/englmaxi
+    - name: rschenk
+      url-base: https://github.com/rschenk
   projects:
     - name: zmk
       remote: zmkfirmware
@@ -21,5 +23,8 @@ manifest:
     - name: zmk-rgbled-widget
       remote: caksoylar
       revision: main
+    - name: zmk-component-raytac-dongle
+      remote: rschenk
+      revision: v0.4
   self:
     path: config
